--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="text-center">
             <div
               class="author-img"
-              style="background-image: url(images/me.jpg)"
+              style="background-image: url(images/1.jpg)"
             ></div>
             <h1 id="colorlib-logo"><a href="">Abhishek Ranjan</a></h1>
           </div>
@@ -256,6 +256,10 @@
                 achieving my objectives.
               </p>
               <div class="row">
+
+
+                <!-- 1ST -->
+                
                 <div
                   class="col-md-6 animate-box"
                   data-animate-effect="fadeInLeft"
@@ -276,6 +280,11 @@
                     </div>
                   </div>
                 </div>
+
+
+                <!-- 2ST -->
+
+
                 <div
                   class="col-md-6 animate-box"
                   data-animate-effect="fadeInRight"
@@ -296,6 +305,10 @@
                     </div>
                   </div>
                 </div>
+
+
+                 <!-- 3ST -->
+
                 <div
                   class="col-md-6 animate-box"
                   data-animate-effect="fadeInRight"
@@ -316,26 +329,11 @@
                     </div>
                   </div>
                 </div>
-                <div
-                  class="col-md-6 animate-box"
-                  data-animate-effect="fadeInLeft"
-                >
-                  <div class="progress-wrap">
-                    <h3 style="font-weight: 500">AWS</h3>
-                    <div class="progress">
-                      <div
-                        class="progress-bar color-3"
-                        role="progressbar"
-                        aria-valuenow="30"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                        style="width: 30%"
-                      >
-                        <span>30%</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+
+
+
+                   <!-- 4ST -->
+
                 <div
                   class="col-md-6 animate-box"
                   data-animate-effect="fadeInRight"
@@ -355,87 +353,12 @@
                       </div>
                     </div>
                   </div>
-                </div>
-                <div
-                  class="col-md-6 animate-box"
-                  data-animate-effect="fadeInLeft"
-                >
-                  <div class="progress-wrap">
-                    <h3 style="font-weight: 500">Phython/C++</h3>
-                    <div class="progress">
-                      <div
-                        class="progress-bar color-5"
-                        role="progressbar"
-                        aria-valuenow="50"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                        style="width: 50%"
-                      >
-                        <span>50%</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div
-                  class="col-md-6 animate-box"
-                  data-animate-effect="fadeInRight"
-                >
-                  <div class="progress-wrap">
-                    <h3 style="font-weight: 500">Firebase/Heroku/Netlify</h3>
-                    <div class="progress">
-                      <div
-                        class="progress-bar color-6"
-                        role="progressbar"
-                        aria-valuenow="50"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                        style="width: 50%"
-                      >
-                        <span>50%</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div
-                  class="col-md-6 animate-box"
-                  data-animate-effect="fadeInLeft"
-                >
-                  <div class="progress-wrap">
-                    <h3 style="font-weight: 500">Git/Postman/ChromeDevTools</h3>
-                    <div class="progress">
-                      <div
-                        class="progress-bar color-7"
-                        role="progressbar"
-                        aria-valuenow="70"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                        style="width: 70%"
-                      >
-                        <span>70%</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div
-                  class="col-md-6 animate-box"
-                  data-animate-effect="fadeInRight"
-                >
-                  <div class="progress-wrap">
-                    <h3 style="font-weight: 500">Jest/Mocha</h3>
-                    <div class="progress">
-                      <div
-                        class="progress-bar color-3"
-                        role="progressbar"
-                        aria-valuenow="80"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                        style="width: 80%"
-                      >
-                        <span>80%</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+                </div>  
+
+
+
+
+
               </div>
             </div>
           </section>
