--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                       <div class="about-desc">
                         <h1>
                           <strong
-                            >Abhishek
-                            <span style="color: #facd69">Ranjan</span></strong
+                            >Brown
+                            <span style="color: #facd69">Munde</span></strong
                           >
                         </h1>
                         <hr />
